# TZB-MMU2S-Firmware

./: .gitignore  Buttons.cpp  Buttons.h  CHANGELOG.md  CMakeLists.txt  MM-control-01.ino  MM-control-01.ino.prusa_mm_control.hex  MM-control-01.ino.rambo.hex  MM-control-01.vcxproj  MM-control-01.vcxproj.filters  MMU-FSensorBN208.hex  README.md  abtn3.c  abtn3.h  adc.c  adc.h  build.bat.in  build.sh  config.h  config.h.orig  diag.c  diag.h  format.sh  main.cpp  main.cpp.orig  main.h  mmctl.cpp  mmctl.h  motion.cpp  motion.h  permanent_storage.cpp  permanent_storage.h  platformio.ini  platformio.pro  shr16.c  shr16.h  spi.c  spi.h  test.sh  timeout.h  (+7 more)
.build/: pre_build_script.py
.github/ISSUE_TEMPLATE/: bug_report.md
Debug/: Buttons.cpp.d  MM-control-01.cpp.d  MM-control-01.elf  MM-control-01.hex  MM-control-01.ino.elf  MM-control-01.ino.hex  abtn3.c.d  adc.c.d  board.buildinfo  diag.c.d  main.cpp.d  mmctl.cpp.d  motion.cpp.d  shr16.c.d  spi.c.d  timer0.c.d  tmc2130.c.d  uart.cpp.d  uploaded.buildinfo
Debug/core/: CDC.cpp.d  HardwareSerial.cpp.d  HardwareSerial0.cpp.d  HardwareSerial1.cpp.d  HardwareSerial2.cpp.d  HardwareSerial3.cpp.d  IPAddress.cpp.d  PluggableUSB.cpp.d  Print.cpp.d  Stream.cpp.d  Tone.cpp.d  USBCore.cpp.d  WInterrupts.c.d  WMath.cpp.d  WString.cpp.d  abi.cpp.d  hooks.c.d  main.cpp.d  new.cpp.d  wiring.c.d  wiring_analog.c.d  wiring_digital.c.d  wiring_pulse.S.d  wiring_pulse.c.d  wiring_shift.c.d
MM-control-01/: Buttons.cpp  Buttons.h  MM-control-01.ino  abtn3.c  config.h  main.cpp  main.h  mmctl.cpp  mmctl.h  motion.cpp  motion.h  permanent_storage.cpp  permanent_storage.h  shr16.c  timeout.h  tmc2130.c  tmc2130.h  uart.cpp  uart.h
Tests/: CMakeLists.txt  mmctl.h  permanent_storage_test.cpp
Tests/avr/: eeprom.h
__vm/: .MM-control-01.vsarduino.h  Compile.vmps.xml  Configuration.Debug.vmps.xml  Upload.vmps.xml
cmake/: GetGitRevisionDescription.cmake
src/: Buttons.cpp  Buttons.h  Detect12V24V.cpp  Detect12V24V.h  Doxyfile  config.h  main.cpp  main.h  mmctl.cpp  mmctl.h  motion.cpp  motion.h  permanent_storage.cpp  permanent_storage.h  shr16.c  shr16.h  tmc2130.c  tmc2130.h  uart.cpp  uart.h
src/variants/: MMU2S-DoubleCutter.h  MMU2S.h
